[gd_scene load_steps=14 format=3 uid="uid://bt5o1wq1ruqy1"]

[ext_resource type="Script" path="res://World_Objects/door.gd" id="1_c5y1n"]
[ext_resource type="Texture2D" uid="uid://mf1f4po7x2x" path="res://Assets/Tiles/tilemap.png" id="2_5y53e"]
[ext_resource type="FontFile" uid="uid://d3on2b22dyyp1" path="res://font/Bungee-MSDF.ttf" id="3_iy4sy"]
[ext_resource type="PackedScene" uid="uid://dyt4xmt2ro7n2" path="res://Interaction/Interaction_Area/interactionArea.tscn" id="3_nlgyv"]
[ext_resource type="Texture2D" uid="uid://bj4opvhpaxg1o" path="res://Assets/Resources/Potato/potato2.png" id="4_cws4o"]
[ext_resource type="Texture2D" uid="uid://b0umr7umgmxnd" path="res://Assets/Resources/Scrap/scrap1.png" id="5_iy1f8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rfwu5"]
atlas = ExtResource("2_5y53e")
region = Rect2(16, 48, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5kcj"]
atlas = ExtResource("2_5y53e")
region = Rect2(16, 64, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dak7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfwu5")
}],
"loop": true,
"name": &"closed",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5kcj")
}],
"loop": true,
"name": &"open",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sp4yl"]
size = Vector2(64, 10)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_47vdc"]
radius = 21.0
height = 68.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pru5i"]
bg_color = Color(0, 0, 0, 0.588235)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_hkxgx"]
default_font = ExtResource("3_iy4sy")

[node name="doorsTop" type="StaticBody2D"]
collision_layer = 256
collision_mask = 2
script = ExtResource("1_c5y1n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dak7y")
animation = &"closed"

[node name="locked" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_sp4yl")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_47vdc")

[node name="interactionArea" parent="." instance=ExtResource("3_nlgyv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_47vdc")

[node name="pricePanel" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = -10.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pru5i")

[node name="Price" type="HBoxContainer" parent="pricePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -3.0
offset_right = 19.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hkxgx")
theme_override_constants/separation = 1
alignment = 1

[node name="potatoPrice" type="Label" parent="pricePanel/Price"]
layout_mode = 2
theme_override_font_sizes/font_size = 3
text = "1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="potatoIcon" type="TextureRect" parent="pricePanel/Price"]
layout_mode = 2
texture = ExtResource("4_cws4o")
expand_mode = 3
stretch_mode = 5

[node name="scrapPrice" type="Label" parent="pricePanel/Price"]
layout_mode = 2
theme_override_font_sizes/font_size = 3
text = "1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="scrapIcon" type="TextureRect" parent="pricePanel/Price"]
layout_mode = 2
texture = ExtResource("5_iy1f8")
expand_mode = 3
stretch_mode = 5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="interactionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interactionArea" to="." method="_on_interaction_area_body_exited"]
